// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Express > should verify existing routes 1`] = `
{
  "/api/schedules": {
    "handlers": {
      "DELETE": [Function],
      "GET": [Function],
      "PATCH": [Function],
      "POST": [Function],
    },
    "plugins": [],
  },
  "/api/switches": {
    "handlers": {
      "DELETE": [Function],
      "GET": [Function],
      "PATCH": [Function],
      "POST": [Function],
    },
    "plugins": [],
  },
  "/api/switches/control": {
    "handlers": {
      "POST": [Function],
    },
    "plugins": [],
  },
}
`;

exports[`Express > should verify multiple namespaces 1`] = `
{
  "/api/schedules": {
    "handlers": {
      "DELETE": [Function],
      "GET": [Function],
      "POST": [Function],
    },
    "plugins": [],
  },
  "/api/schedules/control": {
    "handlers": {
      "POST": [Function],
    },
    "plugins": [],
  },
  "/api/switches": {
    "handlers": {
      "DELETE": [Function],
      "GET": [Function],
      "POST": [Function],
    },
    "plugins": [],
  },
  "/api/users": {
    "handlers": {
      "DELETE": [Function],
      "GET": [Function],
      "POST": [Function],
      "PUT": [Function],
    },
    "plugins": [],
  },
}
`;
